--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -106,6 +106,28 @@ resources:
                 KeyType: HASH
             Projection:
               ProjectionType: ALL
+    DbToolCategories:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: db-kompare-dbtools-categories-${self:provider.stage}
+        DeletionProtectionEnabled: true
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: status
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+        GlobalSecondaryIndexes:
+          - IndexName: byStatus
+            KeySchema:
+              - AttributeName: status
+                KeyType: HASH
+            Projection:
+              ProjectionType: ALL
+
     Blogs:
       Type: AWS::DynamoDB::Table
       Properties:
