--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -268,6 +268,22 @@ functions:
           method: get
           cors: true
           private: true
+  getDbTools:
+    handler: functions/dbtools/getDbTools.handler
+    events:
+      - http:
+          path: /get-dbtools
+          method: get
+          cors: true
+          private: true
+  getDbToolsByCategory:
+    handler: functions/dbtools/getDbToolsByCategory.handler
+    events:
+      - http:
+          path: /get-dbtools-by-category/{category_id}
+          method: get
+          cors: true
+          private: true
 
   editDbToolCategory:
     handler: functions/dbtools-categories/editDbToolCategory.handler
