--- a/resources/serverless.yml
+++ b/resources/serverless.yml
@@ -303,6 +303,34 @@ resources:
             Projection:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
+        
+    DbToolRankings:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: db-kompare-dbtools-rankings-${self:provider.stage}
+        DeletionProtectionEnabled: true
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: date
+            AttributeType: S
+          - AttributeName: includeMe
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+          - AttributeName: date
+            KeyType: RANGE
+        GlobalSecondaryIndexes:
+          - IndexName: byStatusAndDate
+            KeySchema:
+              - AttributeName: includeMe
+                KeyType: HASH
+              - AttributeName: date
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
+        BillingMode: PAY_PER_REQUEST
     Comments:
       Type: AWS::DynamoDB::Table
       Properties:
