refactor: modularize database queries and add new API for retrieving all assignments

--- a/aurora-db/serverless.yml
+++ b/aurora-db/serverless.yml
@@ -33,11 +33,17 @@ plugins:
 functions:
   queryDB:
     handler: functions/handler.queryDB
-    timeout: 30
     events:
       - http:
           path: query
           method: post
+
+  getAllAssignments:
+    handler: functions/assignments/getAllAssignments.handler
+    events:
+      - http:
+          path: /get-assignments
+          method: get
 
 custom:
   outputs:
