--- a/aurora-db/package.json
+++ b/aurora-db/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.3.1",
     "dotenv": "^16.4.7",
     "pg": "^8.13.1",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-pseudo-parameters": "^2.6.1"
+    "serverless-pseudo-parameters": "^2.6.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "prisma": "^6.3.1",
     "serverless-offline": "^14.4.0"
   }
 }
