feat: add Prisma client setup for admin and read-only access, implement CRUD operations for lessons and tags

--- a/aurora-db/serverless.yml
+++ b/aurora-db/serverless.yml
@@ -23,10 +23,10 @@ provider:
     PG_DATABASE: "mydatabase"
     PG_PORT: "5432"
     PG_PASSWORD: ${env:DB_PASSWORD}
-  
+
   apiGateway:
     apiKeys:
-      - name: aurora-key  
+      - name: aurora-key
 custom:
   outputs:
     AuroraClusterEndpoint:
@@ -35,8 +35,8 @@ custom:
     httpPort: 4000
   prune:
     automatic: true
-    number: 1      
-  
+    number: 1
+
 plugins:
   - serverless-pseudo-parameters
   - serverless-dotenv-plugin
@@ -57,7 +57,7 @@ functions:
       - http:
           path: /get-assignments
           method: get
-  
+
   ## ---------Lessons functions---------
   createLesson:
     handler: functions/lessons/createLesson.handler
@@ -73,16 +73,16 @@ functions:
     events:
       - http:
           path: /get-lessons
-          method: get 
+          method: get
           private: true
           cors: true
-  
+
   getSingleLesson:
     handler: functions/lessons/getSingleLesson.handler
     events:
       - http:
           path: lesson/{id}
-          method: get 
+          method: get
           private: true
           cors: true
 
@@ -91,112 +91,118 @@ functions:
     events:
       - http:
           path: lesson/{id}
-          method: put 
+          method: put
           private: true
           cors: true
-  
+
   deleteLesson:
     handler: functions/lessons/deleteLesson.handler
     events:
       - http:
           path: lesson/{id}
-          method: delete 
-          private: true
-          cors: true
-
-## ---------Company functions---------
-  createCompany:
-    handler: functions/company/createCompany.handler
-    events:
-      - http:
-          path: /create-company
-          method: post
-          private: true
-          cors: true        
-
-## --------- Question functions---------
-  createQuestion:
-    handler: functions/questions/createQuestion.handler
-    events:
-      - http:
-          path: /create-question
-          method: post
-          private: true
-          cors: true
-
-  getQuestions:
-    handler: functions/questions/getQuestions.handler
-    events:
-      - http:
-          path: /get-questions
-          method: get
-          private: true
-          cors: true
-
-  getSingleQuestion:
-    handler: functions/questions/getSingleQuestion.handler
-    events:
-      - http:
-          path: question/{slug}
-          method: get
-          private: true
-          cors: true
-
-  updateQuestion:
-    handler: functions/questions/updateQuestion.handler
-    events:
-      - http:
-          path: question/{slug}
-          method: put
-          private: true
-          cors: true
-
-  deleteQuestion:
-    handler: functions/questions/deleteQuestion.handler
-    events:
-      - http:
-          path: question/{slug}
-          method: delete
-          private: true
-          cors: true    
-
-  ## --------- TAGS functions---------                     
-  createTag:
-    handler: functions/tags/createTag.handler
-    events:
-      - http:
-          path: /create-tag
-          method: post
-          private: true
-          cors: true
-
-  getTags:
-    handler: functions/tags/getTags.handler
-    events:
-      - http:
-          path: /get-tags
-          method: get
-          private: true
-          cors: true
-
-  updateTag:
-    handler: functions/tags/updateTag.handler
-    events:
-      - http:
-          path: tag/{id}
-          method: put
-          private: true
-          cors: true
-
-  deleteTag:
-    handler: functions/tags/deleteTag.handler
-    events:
-      - http:
-          path: tag/{id}
           method: delete
           private: true
           cors: true
+  createUserSchema:
+    handler: functions/schemas/createUserSchema.handler
+    events:
+      - http:
+          path: /create-schema
+          method: POST
+          private: true
+          cors: true
+# ## ---------Company functions---------
+#   createCompany:
+#     handler: functions/company/createCompany.handler
+#     events:
+#       - http:
+#           path: /create-company
+#           method: post
+#           private: true
+#           cors: true
 
+# ## --------- Question functions---------
+#   createQuestion:
+#     handler: functions/questions/createQuestion.handler
+#     events:
+#       - http:
+#           path: /create-question
+#           method: post
+#           private: true
+#           cors: true
+
+#   getQuestions:
+#     handler: functions/questions/getQuestions.handler
+#     events:
+#       - http:
+#           path: /get-questions
+#           method: get
+#           private: true
+#           cors: true
+
+#   getSingleQuestion:
+#     handler: functions/questions/getSingleQuestion.handler
+#     events:
+#       - http:
+#           path: question/{slug}
+#           method: get
+#           private: true
+#           cors: true
+
+#   updateQuestion:
+#     handler: functions/questions/updateQuestion.handler
+#     events:
+#       - http:
+#           path: question/{slug}
+#           method: put
+#           private: true
+#           cors: true
+
+#   deleteQuestion:
+#     handler: functions/questions/deleteQuestion.handler
+#     events:
+#       - http:
+#           path: question/{slug}
+#           method: delete
+#           private: true
+#           cors: true
+
+#   ## --------- TAGS functions---------
+#   createTag:
+#     handler: functions/tags/createTag.handler
+#     events:
+#       - http:
+#           path: /create-tag
+#           method: post
+#           private: true
+#           cors: true
+
+#   getTags:
+#     handler: functions/tags/getTags.handler
+#     events:
+#       - http:
+#           path: /get-tags
+#           method: get
+#           private: true
+#           cors: true
+
+#   updateTag:
+#     handler: functions/tags/updateTag.handler
+#     events:
+#       - http:
+#           path: tag/{id}
+#           method: put
+#           private: true
+#           cors: true
+
+#   deleteTag:
+#     handler: functions/tags/deleteTag.handler
+#     events:
+#       - http:
+#           path: tag/{id}
+#           method: delete
+#           private: true
+#           cors: true
 
 resources:
   Resources:
