--- a/api-functions/serverless.yml
+++ b/api-functions/serverless.yml
@@ -97,8 +97,11 @@ provider:
           Resource:
             - ${self:custom.databasesTableArn}/index/byStatus
             - ${self:custom.questionsTableArn}/index/byStatus
+            - ${self:custom.questionsTableArn}
             - ${self:custom.tagsTableArn}/index/byStatus
+            - ${self:custom.tagsTableArn}
             - ${self:custom.companiesTableArn}/index/byStatus
+            - ${self:custom.companiesTableArn}
             - ${self:custom.blogsTableArn}/index/byStatus
             - ${self:custom.dbToolCategoriesTableArn}/index/byStatus
             - ${self:custom.dbToolsTableArn}/index/byStatus
@@ -317,7 +320,7 @@ functions:
           method: get
           cors: true
           private: true
-  
+
   getDbToolsByIds:
     handler: functions/dbtools/getDbToolsByIds.handler
     events:
@@ -363,7 +366,7 @@ functions:
           method: post
           cors: true
           private: true
-  
+
   getDbToolMetrices:
     handler: functions/dbtools-metrices/getDbToolMetrices.handler
     events:
@@ -381,7 +384,7 @@ functions:
           method: get
           cors: true
           private: true
-  
+
   getDbToolsCount:
     handler: functions/dbtools/getDbToolsCount.handler
     events:
@@ -391,7 +394,6 @@ functions:
           cors: true
           private: true
 
-  
   # DB TOOL GITHUB METRICES SCHEDULE
   getDbToolGithubMetrices:
     handler: functions/dbtools-metrices/getDbToolGithubMetrices.handler
@@ -501,7 +503,7 @@ functions:
           rate: cron(20 5 * * ? *) # Fifth job at 5:20 AM UTC
       - schedule:
           rate: cron(25 5 * * ? *) # Sixth job at 5:25 AM UTC
-  
+
   # DATABASE GOOGLE METRICES SCHEDULE
   getGoogleMetrices:
     handler: functions/metrices/getGoogleMetrices.handler
@@ -509,7 +511,7 @@ functions:
     events:
       - schedule:
           rate: cron(50 5 * * ? *) # Runs daily at 5:50 AM UTC
-  
+
   # DATABASE BING METRICES SCHEDULE
   getBingMetrices:
     handler: functions/metrices/getBingMetrices.handler
@@ -517,8 +519,7 @@ functions:
     events:
       - schedule:
           rate: cron(0 6 * * ? *) # Runs daily at 6:00 AM UTC
-  
-  
+
   # DATABASE POPULARITY UPDATE SCHEDULE
   updatePopularity:
     handler: functions/metrices/updatePopularity.handler
@@ -532,6 +533,99 @@ functions:
     events:
       - schedule:
           rate: cron(10 6 * * ? *) # Runs daily at 6:10 AM UTC
+
+  ## ---------Company functions---------
+  createCompany:
+    handler: functions/companies/createCompany.handler
+    events:
+      - http:
+          path: /create-company
+          method: post
+          private: true
+          cors: true
+
+  ## --------- Question functions---------
+  createQuestion:
+    handler: functions/questions/createQuestion.handler
+    events:
+      - http:
+          path: /create-question
+          method: post
+          private: true
+          cors: true
+
+  getQuestions:
+    handler: functions/questions/getQuestions.handler
+    events:
+      - http:
+          path: /get-questions
+          method: get
+          private: true
+          cors: true
+
+  getSingleQuestion:
+    handler: functions/questions/getSingleQuestion.handler
+    events:
+      - http:
+          path: question/{id}
+          method: get
+          private: true
+          cors: true
+
+  updateQuestion:
+    handler: functions/questions/updateQuestion.handler
+    events:
+      - http:
+          path: question/{id}
+          method: put
+          private: true
+          cors: true
+
+  deleteQuestion:
+    handler: functions/questions/deleteQuestion.handler
+    events:
+      - http:
+          path: question/{id}
+          method: delete
+          private: true
+          cors: true
+
+  ## --------- TAGS functions---------
+  createTag:
+    handler: functions/tags/createTag.handler
+    events:
+      - http:
+          path: /create-tag
+          method: post
+          private: true
+          cors: true
+
+  getTags:
+    handler: functions/tags/getTags.handler
+    events:
+      - http:
+          path: /get-tags
+          method: get
+          private: true
+          cors: true
+
+  updateTag:
+    handler: functions/tags/updateTag.handler
+    events:
+      - http:
+          path: tag/{id}
+          method: put
+          private: true
+          cors: true
+
+  deleteTag:
+    handler: functions/tags/deleteTag.handler
+    events:
+      - http:
+          path: tag/{id}
+          method: delete
+          private: true
+          cors: true
 
 resources:
   Resources:
